fixed navbar overlap by #action

--- a/app/assets/stylesheets/bootstrap_and_overrides.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.less
@@ -79,7 +79,7 @@ header.navbar{
     margin-top: @material-overlap;
     transform: translateY(-50%) translateX(@grid-gutter-width/2);
   }
-  z-index: 10;
+  z-index: 9;
 }
 
 .jumbo-card{
